<resources>
    <string name="app_name">Inventory</string>

    <string name="splash">Inventory app</string>

    <string name="action_menu_delete_all">Delete all products</string>
    <string name="action_menu_edit">Edit product</string>

    <string name="empty_text">Store empty now</string>

    <string name="action_menu_add">Add product</string>
    <string name="action_menu_attach">Attach image</string>
    <string name="action_menu_delete">Delete product</string>

    <string name="edit_name_hint">Product Name</string>
    <string name="edit_quantity_hint">Product Quantity</string>
    <string name="edit_price_hint">Product Price</string>
    <string name="edit_supplier_hint">Product Supplier</string>
    <string name="edit_image_description">Product Image</string>
    <string name="edit_get_image_button">Pick product image</string>

    <string name="dialog_delete_all_msg">Do you want to delete all data?</string>
    <string name="dialog_delete_all_yes">Delete all</string>
    <string name="dialog_delete_all_cancel">Cancel</string>

    <string name="dialog_save_msg">You do some change on data, Do you want to save it?</string>
    <string name="dialog_save_discard">Discard</string>
    <string name="dialog_save_keep_editing">Keep Editing</string>

    <string name="dialog_delete_msg">Do you want to delete this product?</string>
    <string name="dialog_delete_yes">Delete</string>
    <string name="dialog_delete_cancel">Cancel</string>

    <string name="sales_activity_title">Products Sales</string>

    <string name="blank_supplier">Blank Supplier</string>

    <string name="add">+</string>
    <string name="back">-</string>

    <string name="action_sales_menu_sale_product">Sale Product</string>

    <string name="empty_sales_list">No Sales available</string>

    <string name="customer_name">Customer name</string>

    <string name="default_quantity_value">0</string>

    <string name="dialog_delete_sales_msg">Do you want to delete Sale bill?</string>

</resources>
