<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.abanoub.unit.inventory.UI.SaleProductActivity">

    <EditText
        android:id="@+id/customer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/customer_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0">

        <TextView
            android:id="@+id/customer_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:fontFamily="sans-serif-medium"
            android:textSize="16sp"
            android:maxLines="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/customer_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:fontFamily="sans-serif-medium"
            android:textSize="16sp"
            android:maxLines="1"
            android:gravity="center"/>

        <Spinner
            android:id="@+id/customer_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="140dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0">

        <Button
            android:id="@+id/add_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"/>

        <TextView
            android:id="@+id/customer_total_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/default_quantity_value"
            android:layout_weight="2"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-medium"
            android:textSize="18sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/customer_total_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/default_quantity_value"
            android:layout_weight="2"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-medium"
            android:textSize="18sp"
            android:gravity="center"/>

        <Button
            android:id="@+id/back_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
